added primary, secondary weapons and throwables to picking page, no images for throwables yet. WIP

--- a/style.css
+++ b/style.css
@@ -8,3 +8,14 @@
     flex: 1 1 300px;
     margin: 10px;
 }
+
+.weapons-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.weapons {
+    flex: 1 1 300px;
+    margin: 10px;
+}
